feat: added productName and aligned to svc changes
