# src/main/openapi/openapi-bff.yaml
@@ -11,7 +11,7 @@ tags:
   - name: parameters
 paths:
   /histories:
-    get:
+    post:
       x-onecx:
         permissions:
           parameter:
@@ -20,38 +20,11 @@ paths:
         - histories
       description: Find all parameters history
       operationId: getAllApplicationParametersHistory
-      parameters:
-        - name: applicationId
-          in: query
-          schema:
-            description: The application parameter id.
-            type: string
-        - name: key
-          in: query
-          schema:
-            description: The application parameter key.
-            type: string
-        - name: pageNumber
-          in: query
-          schema:
-            format: int32
-            description: The number of page.
-            default: 0
-            type: integer
-        - name: pageSize
-          in: query
-          schema:
-            format: int32
-            description: The size of page
-            default: 100
-            type: integer
-        - name: type
-          in: query
-          schema:
-            description: The application parameter type.
-            type: array
-            items:
-              type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApplicationParameterHistoryCriteria'
       responses:
         "200":
           description: OK
@@ -66,7 +39,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
   /histories/counts:
-    get:
+    post:
       x-onecx:
         permissions:
           parameter:
@@ -75,38 +48,11 @@ paths:
         - histories
       description: Get creation dates and counts by criteria
       operationId: getCountsByCriteria
-      parameters:
-        - name: applicationId
-          in: query
-          schema:
-            description: The application parameter id.
-            type: string
-        - name: key
-          in: query
-          schema:
-            description: The application parameter key.
-            type: string
-        - name: pageNumber
-          in: query
-          schema:
-            format: int32
-            description: The number of page.
-            default: 0
-            type: integer
-        - name: pageSize
-          in: query
-          schema:
-            format: int32
-            description: The size of page
-            default: 100
-            type: integer
-        - name: type
-          in: query
-          schema:
-            description: The application parameter type.
-            type: array
-            items:
-              type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ParameterHistoryCountCriteria'
       responses:
         "200":
           description: OK
@@ -123,7 +69,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ProblemDetailResponse'
   /histories/latest:
-    get:
+    post:
       x-onecx:
         permissions:
           parameter:
@@ -132,38 +78,12 @@ paths:
         - histories
       description: Find all parameters history latest
       operationId: getAllApplicationParametersHistoryLatest
-      parameters:
-        - name: applicationId
-          in: query
-          schema:
-            description: The application parameter id.
-            type: string
-        - name: key
-          in: query
-          schema:
-            description: The application parameter key.
-            type: string
-        - name: pageNumber
-          in: query
-          schema:
-            format: int32
-            description: The number of page.
-            default: 0
-            type: integer
-        - name: pageSize
-          in: query
-          schema:
-            format: int32
-            description: The size of page
-            default: 100
-            type: integer
-        - name: type
-          in: query
-          schema:
-            description: The application parameter type.
-            type: array
-            items:
-              type: string
+
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApplicationParameterHistoryCriteria'
       responses:
         "200":
           description: OK
@@ -223,6 +143,11 @@ paths:
           in: query
           schema:
             description: The application parameter id.
+            type: string
+        - name: productName
+          in: query
+          schema:
+            description: The product name.
             type: string
         - name: key
           in: query
@@ -333,6 +258,11 @@ paths:
           schema:
             description: The application parameter id.
             type: string
+        - name: productName
+          in: query
+          schema:
+            description: The product name.
+            type: string
       responses:
         "200":
           description: OK
@@ -442,6 +372,8 @@ components:
           type: string
         applicationId:
           type: string
+        productName:
+          type: string
         value:
           type: string
         type:
@@ -482,6 +414,8 @@ components:
           type: string
         applicationId:
           type: string
+        productName:
+          type: string
         key:
           type: string
         setValue:
@@ -520,6 +454,8 @@ components:
           type: string
         applicationId:
           type: string
+        productName:
+          type: string
         key:
           type: string
         usedValue:
@@ -530,6 +466,27 @@ components:
           type: string
         instanceId:
           type: string
+    ApplicationParameterHistoryCriteria:
+      type: object
+      properties:
+        applicationId:
+          type: string
+        productName:
+          type: string
+        key:
+          type: string
+        pageNumber:
+          type: integer
+          format: int32
+          default: 0
+        pageSize:
+          type: integer
+          format: int32
+          default: 100
+        type:
+          type: array
+          items:
+            type: string
     ApplicationParameterHistoryPageResult:
       type: object
       properties:
@@ -621,6 +578,27 @@ components:
           format: int64
           type: integer
         stream:
+          type: array
+          items:
+            type: string
+    ParameterHistoryCountCriteria:
+      type: object
+      properties:
+        applicationId:
+          type: string
+        productName:
+          type: string
+        key:
+          type: string
+        pageNumber:
+          format: int32
+          default: 0
+          type: integer
+        pageSize:
+          format: int32
+          default: 100
+          type: integer
+        type:
           type: array
           items:
             type: string
